--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ FunSQL = "cf6cc811-59f4-4a10-b258-a8547a8f6407"
 Inflector = "6d011eab-0732-4556-8808-e463c76bf3b6"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
+NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
