--- a/Project.toml
+++ b/Project.toml
@@ -14,3 +14,4 @@ NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
