--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "6f72f9d7-811b-4da6-baae-56a3a3823ad6"
 authors = ["asjir <pa.paradysz@gmail.com>"]
 version = "0.1.0"
 
+[compat]
+julia = "^1.7"
+
 [deps]
 DBInterface = "a10d1c49-ce27-4219-8d33-6db1a4562965"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
