--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,13 +72,13 @@ jobs:
     - uses: codecov/codecov-action@v2
       with:
         file: lcov.info
-#  docs:
-#    name: Documentation
-#    runs-on: ubuntu-latest
-#    steps:
-#    - uses: actions/checkout@v2
-#    - uses: julia-actions/setup-julia@v1
-#    - uses: julia-actions/julia-buildpkg@v1
-#    - uses: julia-actions/julia-docdeploy@v1
-#      env:
-#        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  docs:
+    name: Documentation
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: julia-actions/setup-julia@v1
+    - uses: julia-actions/julia-buildpkg@v1
+    - uses: julia-actions/julia-docdeploy@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
