--- a/Project.toml
+++ b/Project.toml
@@ -3,12 +3,10 @@ uuid = "6f72f9d7-811b-4da6-baae-56a3a3823ad6"
 authors = ["asjir <pa.paradysz@gmail.com>"]
 version = "0.1.0"
 
-[compat]
-julia = "^1.7"
-
 [deps]
 DBInterface = "a10d1c49-ce27-4219-8d33-6db1a4562965"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 FunSQL = "cf6cc811-59f4-4a10-b258-a8547a8f6407"
 Inflector = "6d011eab-0732-4556-8808-e463c76bf3b6"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
@@ -18,3 +16,6 @@ PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
+
+[compat]
+julia = "^1.7"
