--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "FunnyORM"
 uuid = "6f72f9d7-811b-4da6-baae-56a3a3823ad6"
 authors = ["asjir <pa.paradysz@gmail.com>"]
-version = "0.1.0"
+version = "0.1.1"
 
 [deps]
 DBInterface = "a10d1c49-ce27-4219-8d33-6db1a4562965"
@@ -18,5 +18,5 @@ DBInterface = "2.5"
 FunSQL = "0.10"
 Inflector = "1"
 MacroTools = "0.5"
-PrettyTables = "2"
+PrettyTables = "^1.3, 2"
 Tables = "1.6"
