--- a/Project.toml
+++ b/Project.toml
@@ -13,10 +13,10 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [compat]
-julia = "^1.7"
 DBInterface = "2.5"
-FunSQL = "0.10"
+FunSQL = "^0.11"
 Inflector = "1"
 MacroTools = "0.5"
 PrettyTables = "^1.3, 2"
 Tables = "1.6"
+julia = "^1.7"
