--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,6 +1,8 @@
 [deps]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 DBInterface = "a10d1c49-ce27-4219-8d33-6db1a4562965"
 FunSQL = "cf6cc811-59f4-4a10-b258-a8547a8f6407"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
